--- a/view/frontend/layout/checkout_index_index.xml
+++ b/view/frontend/layout/checkout_index_index.xml
@@ -23,10 +23,10 @@
                                                         <item name="renders" xsi:type="array">
                                                             <!-- merge payment method renders here -->
                                                             <item name="children" xsi:type="array">
-                                                                <item name="wizpay" xsi:type="array">
-                                                                    <item name="component" xsi:type="string">Wizpay_Wizpay/js/view/payment/wizpay</item>
+                                                                <item name="wizit" xsi:type="array">
+                                                                    <item name="component" xsi:type="string">Wizit_Wizit/js/view/payment/wizit</item>
                                                                     <item name="methods" xsi:type="array">
-                                                                        <item name="wizpay" xsi:type="array">
+                                                                        <item name="wizit" xsi:type="array">
                                                                             <item name="isBillingAddressRequired" xsi:type="boolean">true</item>
                                                                         </item>
                                                                     </item>
