--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,7 +1,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:module:View/Layout:etc/page_configuration.xsd">
     <body>
         <referenceContainer name="main">
-            <block class="Wizpay\Wizpay\Block\Popup" template="wizpay_popup.phtml" />
+            <block class="Wizit\Wizit\Block\Popup" template="wizit_popup.phtml" />
         </referenceContainer>
     </body>
 </page>
