--- a/view/adminhtml/web/css/custom-admin.css
+++ b/view/adminhtml/web/css/custom-admin.css
@@ -4,3 +4,13 @@ tr#row_payment_au_wizit_min_max_wizit_merchant_min_amounts {
 tr#row_payment_other_wizit_min_max_wizit_merchant_min_amounts {
     display: none !important;
 }
+
+
+.wizit-logo{
+    display: block;
+    width: 100px;
+    height: 30px;
+    background-image: url(../images/Group.png);
+    background-repeat: no-repeat;
+    
+}
