--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -1,41 +1,45 @@
-<style>
-    .wizp-custom-payfields .wizp-row {
-        display: flex;
-        flex-wrap: wrap;
-        text-align: center;
-    }
-
-    .wizp-custom-payfields .wizp-row .wizp-col-3 {
-        flex: 0 0 auto;
-        width: 25%;
-    }
-
-    @media screen and (max-width: 576px) {
-        .wizp-custom-payfields .wizp-row .wizp-col-sm-6 {
-            flex: 0 0 auto;
-            width: 50%;
-        }
-    }
-</style>
-
 
 
 
 <div class="payment-method" data-bind="css: {'_active': (getCode() == isChecked())}">
+
+    <style>
+        .wizit-custom-payfields .wizit-row {
+            display: flex;
+            flex-wrap: wrap;
+            text-align: center;
+        }
+    
+        .wizit-custom-payfields .wizit-row .wizit-col-3 {
+            flex: 0 0 auto;
+            width: 25%;
+        }
+    
+        @media screen and (max-width: 576px) {
+            .wizit-custom-payfields .wizit-row .wizit-col-sm-6 {
+                flex: 0 0 auto;
+                width: 50%;
+            }
+        }
+    </style>
+    
+
+    
     <div class="payment-method-title field choice">
         <input type="radio" name="payment[method]" class="radio"
             data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
         
         <label data-bind="attr: {'for': getCode()}" class="label" for="Wizit">
             <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon" alt="Wizit" />
+            &nbsp;&nbsp;<span style="line-height: 35px;" data-bind="text: getTitle()"></span>
         </label>
     </div>
     <div class="payment-method-content">
         <h5 style="font-size: 16px;">4 x interest free fortnightly instalments totalling $<span
                 data-bind="text: totalamount()"></span></h5>
-        <div class="wizp-custom-payfields">
-            <div class="wizp-row">
-                <div class="wizp-col-3 wizp-col-sm-6">
+        <div class="wizit-custom-payfields">
+            <div class="wizit-row">
+                <div class="wizit-col-3 wizit-col-sm-6">
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,7 +51,7 @@
                     </div>
                     <p>First Payment</p>
                 </div>
-                <div class="wizp-col-3 wizp-col-sm-6">
+                <div class="wizit-col-3 wizit-col-sm-6">
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -59,7 +63,7 @@
                     </div>
                     <p>2 weeks later</p>
                 </div>
-                <div class="wizp-col-3 wizp-col-sm-6">
+                <div class="wizit-col-3 wizit-col-sm-6">
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -71,7 +75,7 @@
                     </div>
                     <p>4 weeks later</p>
                 </div>
-                <div class="wizp-col-3 wizp-col-sm-6">
+                <div class="wizit-col-3 wizit-col-sm-6">
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
