--- a/view/frontend/templates/wizit_popup.phtml
+++ b/view/frontend/templates/wizit_popup.phtml
@@ -42,7 +42,7 @@
         var popup = modal(options, $('#wizit-modal-content'));
         $(".wizit-learn-more-popup-link").click(function() {
             // set iframe url
-            document.getElementById('wizit-popup-iframe').setAttribute("src","https://info.wizpay.com.au/HowItWorks/HowItWorks.html");
+            document.getElementById('wizit-popup-iframe').setAttribute("src","https://info.wizit.money/HowItWorks/HowItWorks.html");
             // load modal
             $('#wizit-modal-content').modal('openModal');
         });
