remove t and c from popup

--- a/view/frontend/templates/wizit_popup.phtml
+++ b/view/frontend/templates/wizit_popup.phtml
@@ -11,7 +11,7 @@
 
 <div id="wizit-modal-content">
     <div class="modal-body-content wizit-popup-body-content">
-        <iframe id="wizit-popup-iframe" title="Terms and Conditions">
+        <iframe id="wizit-popup-iframe" title="">
         </iframe>
     </div>    
 </div>
@@ -26,7 +26,7 @@
         var options = {
             type: 'popup',
             responsive: true,
-            title: 'Terms and Conditions',
+            title: '',
             buttons: [{
                 text: $.mage.__('Close'),
                 class: '',
