--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -43,7 +43,7 @@
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="3" cy="3" r="3" fill="#6F00FF" />
+                            <circle cx="3" cy="3" r="3" fill="#e61996" />
                             <circle cx="13" cy="3" r="3" fill="#EDEDF4" />
                             <circle cx="3" cy="13" r="3" fill="#EDEDF4" />
                             <circle cx="13" cy="13" r="3" fill="#EDEDF4" />
@@ -55,8 +55,8 @@
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="3" cy="3" r="3" fill="#6F00FF" />
-                            <circle cx="13" cy="3" r="3" fill="#6F00FF" />
+                            <circle cx="3" cy="3" r="3" fill="#e61996" />
+                            <circle cx="13" cy="3" r="3" fill="#e61996" />
                             <circle cx="3" cy="13" r="3" fill="#EDEDF4" />
                             <circle cx="13" cy="13" r="3" fill="#EDEDF4" />
                         </svg>
@@ -67,9 +67,9 @@
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="3" cy="3" r="3" fill="#6F00FF" />
-                            <circle cx="13" cy="3" r="3" fill="#6F00FF" />
-                            <circle cx="3" cy="13" r="3" fill="#6F00FF" />
+                            <circle cx="3" cy="3" r="3" fill="#e61996" />
+                            <circle cx="13" cy="3" r="3" fill="#e61996" />
+                            <circle cx="3" cy="13" r="3" fill="#e61996" />
                             <circle cx="13" cy="13" r="3" fill="#EDEDF4" />
                         </svg>
                     </div>
@@ -79,10 +79,10 @@
                     <span style="font-size: 18px;">$<span data-bind="text: installment()"></span></span>
                     <div class="installment1">
                         <svg width="25" height="25" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <circle cx="3" cy="3" r="3" fill="#6F00FF" />
-                            <circle cx="13" cy="3" r="3" fill="#6F00FF" />
-                            <circle cx="3" cy="13" r="3" fill="#6F00FF" />
-                            <circle cx="13" cy="13" r="3" fill="#6F00FF" />
+                            <circle cx="3" cy="3" r="3" fill="#e61996" />
+                            <circle cx="13" cy="3" r="3" fill="#e61996" />
+                            <circle cx="3" cy="13" r="3" fill="#e61996" />
+                            <circle cx="13" cy="13" r="3" fill="#e61996" />
                         </svg>
                     </div>
                     <p>6 weeks later</p>
