--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -20,8 +20,8 @@
     <div class="payment-method-title field choice">
         <input type="radio" name="payment[method]" class="radio"
           data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
-       <label data-bind="attr: {'for': getCode()}" class="label" for="Wizpay">
-            <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon" alt="Wizpay" />
+       <label data-bind="attr: {'for': getCode()}" class="label" for="Wizit">
+            <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon" alt="Wizit" />
             &nbsp;&nbsp;<span style="line-height: 25px;" data-bind="text: getTitle()"></span>
        </label>
     </div>
@@ -108,7 +108,7 @@
                      click: placeOrder,
                      css: {disabled: !isPlaceOrderActionAllowed()}
                      " class="action primary checkout" disabled>
-                  <span data-bind="i18n: 'Place Order with Wizpay'"></span>
+                  <span data-bind="i18n: 'Place Order with Wizit'"></span>
                   </button>
                </div>
             </div>
