update popup message

--- a/view/frontend/templates/wizit_popup.phtml
+++ b/view/frontend/templates/wizit_popup.phtml
@@ -10,8 +10,9 @@
 
 <div id="wizit-modal-content">
     <div class="modal-body-content wizit-popup-body-content">
-        <iframe id="wizit-popup-iframe" title="">
-        </iframe>
+        <a href="https://info.wizit.money/HowItWorks/HowItWorks.html" target="_blank">
+            <img src="'. $url_popup .'" title="Terms and Conditions" />
+        </a>
     </div>    
 </div>
 
