--- a/view/frontend/templates/wizit_popup.phtml
+++ b/view/frontend/templates/wizit_popup.phtml
@@ -8,6 +8,32 @@
     text-align: center;
 }
 
+.wizit-custom-modal .modal-inner-wrap{
+    background: transparent !important;
+    box-shadow: none  !important;
+    width: 100% !important;
+    max-width: 600px;
+}
+
+.wizit-custom-modal .modal-inner-wrap .modal-header{
+    
+}
+
+
+.wizit-custom-modal .modal-inner-wrap .modal-header .action-close{
+    top: 4rem !important;
+    right: 3rem !important;
+}
+
+.wizit-custom-modal .modal-inner-wrap .modal-header .action-close:before{
+    color: white !important;
+}
+
+.wizit-custom-modal .modal-inner-wrap .modal-footer{
+    display: none;
+}
+
+
 </style>
 
 
@@ -30,6 +56,7 @@
         var options = {
             type: 'popup',
             responsive: true,
+            modalClass: 'wizit-custom-modal',
             title: '',
             buttons: [{
                 text: $.mage.__('Close'),
