--- a/view/frontend/templates/wizit_popup.phtml
+++ b/view/frontend/templates/wizit_popup.phtml
@@ -41,7 +41,7 @@
 <div id="wizit-modal-content" style="display:none;">
     <div class="modal-body-content wizit-popup-body-content" style="display:none;">
         <a href="https://info.wizit.money/HowItWorks/HowItWorks.html" target="_blank">
-            <img id="wizit-popup-image" src="<?php echo $block->getPopupImageUrl(); ?>" title="Terms and Conditions" />
+            <img id="wizit-popup-image" src="https://www.wizit.money/img/plugin/wizit_popup.png" title="Terms and Conditions" />
         </a>
     </div>    
 </div>
