--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -30,7 +30,7 @@
             data-bind="attr: {'id': getCode()}, value: getCode(), checked: isChecked, click: selectPaymentMethod, visible: isRadioButtonVisible()" />
         
         <label data-bind="attr: {'for': getCode()}" class="label" for="Wizit">
-            <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon" alt="Wizit" />
+            <img data-bind="attr: {src: getLogoUrl()}" class="payment-icon wizit-payment-logo" alt="Wizit" />
             &nbsp;&nbsp;<span style="line-height: 35px;" data-bind="text: getTitle()"></span>
         </label>
     </div>
