--- a/view/frontend/web/template/payment/form.html
+++ b/view/frontend/web/template/payment/form.html
@@ -21,6 +21,10 @@
                 width: 50%;
             }
         }
+
+        .payment-icon.wizit-payment-logo{
+            max-width: 50px !important;
+        }
     </style>
     
 
